objects/WT_Weekly_Opportunity_Metric__c.object
<CustomObject>
    <fields>
        <fullName>WT_Line_Of_Business__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Line Of Business</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Opp_New_In_Dollar__c</fullName>
        <label>Number of Opp New Dollar Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Opportunities_Lost_In_Dollars__c</fullName>
        <label>Number of opportunities Lost In Dollars</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Opportunities_Lost__c</fullName>
        <label>Number of Opportunities Lost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Opportunities_Won_In_Dollars__c</fullName>
        <label>Number of Opportunities Won in Dollars</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Opportunities_Won__c</fullName>
        <label>Number of Opportunities Won</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Sales_Opportunities__c</fullName>
        <label>Number of Sales Opportunities Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Weekly_Metric__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Weekly Metric</label>
        <referenceTo>WT_Weekly_Metric__c</referenceTo>
        <relationshipLabel>Weekly Opportunity Metrics</relationshipLabel>
        <relationshipName>Weekly_Opportunity_Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Weekly Opportunity Metric</label>
    <nameField>
        <displayFormat>WOM-{000}</displayFormat>
        <label>Weekly Opportunity Metric Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weekly Opportunity Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>